--- a/frontend/virtual-keyboard/src/index.css
+++ b/frontend/virtual-keyboard/src/index.css
@@ -5,3 +5,42 @@
 .white-key {
   @apply border border-black w-20 h-48 bg-white text-red-500 text-center flex items-end justify-center;
 }
+
+.pianoPage {
+  align-items: center;
+}
+h1 {
+  text-align: center;
+}
+.piano {
+  display: flex;
+  justify-content: center;
+}
+.white-key {
+  border: 1px solid #000000;
+  width: 100px;
+  height: 400px;
+  background-color: white;
+  color: red;
+  text-align: center;
+}
+.black-key {
+  background-color: black;
+  width: 60px;
+  height: 250px;
+  margin-left: -30px;
+  margin-right: -30px;
+  z-index: 1;
+  color: red;
+  text-align: center;
+}
+
+.playbtn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.btn{
+  cursor: pointer;
+}
