--- a/frontend/virtual-keyboard/src/index.css
+++ b/frontend/virtual-keyboard/src/index.css
@@ -57,8 +57,10 @@ h1 {
 .white-key:active{
   background-color: darkgray;
   transform: scale(0.97);
+  transition: transform 0.2s ease-in-out
 }
 .black-key:active {
   background-color: rgb(96, 96, 96);
   transform: scale(0.99);
+  transition: transform 0.2s ease-in-out
 }
