--- a/frontend/virtual-keyboard/src/index.css
+++ b/frontend/virtual-keyboard/src/index.css
@@ -21,9 +21,11 @@ h1 {
   width: 100px;
   height: 400px;
   background-color: white;
-  color: red;
+  color: black;
   text-align: center;
   transition: background-color 0.3s, transform 0.1s;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 .black-key {
   background-color: black;
@@ -32,8 +34,9 @@ h1 {
   margin-left: -30px;
   margin-right: -30px;
   z-index: 1;
-  color: red;
+  color: white;
   text-align: center;
+  padding-top: 50px;
 }
 
 .playbtn{
